feat: add Start enum for DFA start state look-behind context
Also fix BuilderTest to use Arrays.asList() for nullable group names
(List.of() does not permit null elements).